fix some alignments

--- a/css/style.css
+++ b/css/style.css
@@ -301,7 +301,8 @@ Footer Section
 }
 
 .footer p {
-  padding: 21px 10px;
+  /* padding-top: 30px; */
+  padding: 30px 10px;
 }
 
 .footer p a {
